# PyPHP

./: CONTRIBUTING.md  LICENSE  Makefile  PHP_COMPATIBILITY.md  README.md  model.php  pyphp.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml  test.yml
docs/: _config.yml  compatibility.md  contributing.md  examples.md  index.md  usecases.md
examples/c_header/: header.php  model.php  model.py  model.xml
examples/docs/: api.php  api.xml
examples/getopt/: greet.php
examples/html/: report.php  weather.py
examples/simplexml/: catalog.php  catalog.xml
pyphp/: __init__.py  __main__.py  builtins.py  preprocessor.py  renderer.py  simplexml.py
tests/: abstract_class.php  arithmetic.expected  arithmetic.php  array_extended.php  array_functions.expected  array_functions.php  array_keys_string.php  array_push_and_const.php  array_push_prop.php  arrow_concat.php  arrow_functions.php  braceless_nested_blocks.php  byref_param.php  classes.php  closures.php  comment_apostrophe.php  comments.php  concat_in_args.php  control_blocks.php  do_while.php  dynamic_props.php  echo_multiarg.php  else_if.php  expr_multiline.php  extract.php  filesystem_helpers.php  for_loop.php  foreach.php  foreach_multiline.php  foreach_no_colon.php  foreach_single_line_body.php  foreach_this.php  functions.expected  functions.php  generators.php  getopt.php  greet_helper.py  hello.phps  heredoc.php  if.php  (+58 more)
