[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pyphp"
version = "0.1.0"
description = "A lightweight PHP-style template renderer for Python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["php", "template", "renderer", "preprocessor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing :: Markup",
]

[project.scripts]
pyphp = "pyphp.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyphp*"]
