[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pyphp"
dynamic = ["version"]
description = "A lightweight PHP-style template renderer for Python"
authors = [
    { name = "Igor Chernakov", email = "igor.chernakov@gmail.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["php", "template", "renderer", "preprocessor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing :: Markup",
]

[project.scripts]
pyphp = "pyphp.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyphp*"]

[tool.setuptools_scm]
